--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>CURSO GIT</title>
 </head>
 <body>
-    
+    <nav class="navbar navbar-brand">
+        <a href="/">CURSO GIT</a>
+    </nav>
 </body>
 </html>
