--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CURSO GIT</title>
+    
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <nav class="navbar navbar-brand">
